--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
+
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap"
+        rel="stylesheet">
+
+    <!--Style sheet Adding section-->
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!--Header Section Start-->
+    <!--Header Section Start-->
+    <!--Header Section Start-->
+
+    <section class="header">
+        <div class="header_section">
+                    <h1>Let's Help Those Who Are More In Need</h1>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                        deterruisset. No duo populo animal noluisse, enim</p>
+                    <a href="https://www.linkedin.com/in/ashraf-tanvir-043864223/">Donate Now</a>
+        </div>
+    </section>
+
+    <!--Header Section End-->
+    <!--Header Section End-->
+    <!--Header Section End-->
+
     
+
+
 </body>
 </html>
