--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h1>Let's Help Those Who Are More In Need</h1>
                     <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                         deterruisset. No duo populo animal noluisse, enim</p>
-                    <a href="https://www.linkedin.com/in/ashraf-tanvir-043864223/">Donate Now</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/ashraf-tanvir-043864223/">Donate Now</a>
         </div>
     </section>
 
@@ -35,7 +35,7 @@
     <!--Header Section End-->
     <!--Header Section End-->
 
-    
+
 
 
 </body>
