--- a/index.html
+++ b/index.html
@@ -35,7 +35,46 @@
     <!--Header Section End-->
     <!--Header Section End-->
 
+    <!-------        Donate Section start     ----------->
+    <!-------        Donate Section start     ----------->
+    <!-------        Donate Section start     ----------->
 
+    <section class="donate_section">
+        <div class="donate">
+            <h2>Donate Today</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+
+        <!---Donate section Amount Option-->
+        <div class="dollar_amount">
+            <div class="amount">
+                <h3>100$</h3>
+            </div>
+            <div class="amount color_amount">
+                <h3>500$</h3>
+            </div>
+            <div class="amount">
+                <h3>1000$</h3>
+            </div>
+            <div class="amount">
+                <h3>5000$</h3>
+            </div>
+            <div class="amount">
+                <h3>10000$</h3>
+            </div>
+        </div>
+
+        <div class="amount_write">
+            <h4>Other Amount (Dollar)</h4><hr>
+            <a target="_blank" href="https://www.linkedin.com/in/ashraf-tanvir-043864223/">Donate Now</a>
+        </div>
+
+    </section>
+
+    <!-------        Donate Section End     ----------->
+    <!-------        Donate Section End     ----------->
+    <!-------        Donate Section End     ----------->
 
 
 </body>
