--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <section class="header">
         <div class="header_section">
                     <h1>Let's Help Those Who Are More In Need</h1>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                        deterruisset. No duo populo animal noluisse, enim</p>
+                    <p>Every penny donated makes a huge difference to the work we do, young children and their families. It literally can mean
+                    a case of life or death for some.</p>
                     <a target="_blank" href="https://www.linkedin.com/in/ashraf-tanvir-043864223/">Donate Now</a>
         </div>
     </section>
@@ -42,8 +42,8 @@
     <section class="donate_section">
         <div class="donate">
             <h2>Donate Today</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Your donation helps support A·B·C for Sustainability™ projects worldwide. Please donate online or complete and send in
+            the donation form linked below.</p>
         </div>
 
         <!---Donate section Amount Option-->
@@ -75,6 +75,48 @@
     <!-------        Donate Section End     ----------->
     <!-------        Donate Section End     ----------->
     <!-------        Donate Section End     ----------->
+
+
+    <!-------        Third section Donate Plan start     ----------->
+    <!-------        Third section Donate Plan start     ----------->
+    <!-------        Third section Donate Plan start     ----------->
+
+    <section class="third_donate_plan">
+        <div class="plan_header">
+            <h1>Our Donate Plan</h1>
+            <p>Provide innocent little ones with food, medicine, clean water, loving care and hope for a better future.</p>
+        </div>
+
+        <!---3 Different Plan Section --->
+        
+        <div class="different_plan">
+            <div class="plan food_plan">
+                <img src="image/food.png" alt="Food Picture">
+                <h3>Food for a family</h3>
+                <p>Our community outreach program is also an essential part of food distribution program. We are working with local
+                businesses to find out what skills and jobs are in demand, and we will then tailor our educational and internship
+                programmes to these needs.</p>
+            </div>
+            <div class="plan shelter_plan">
+                <img src="image/shelter.png" alt="Shelter Picture">
+                <h3>Shelter for a family</h3>
+                <p>Our community outreach program is also an essential part of Shelter program. We are working with local
+                businesses to find out what skills and jobs are in demand, and we will then tailor our educational and internship
+                programmes to these needs.</p>
+            </div>
+            <div class="plan education_plan">
+                <img src="image/Frame-1.png" alt="Education Plan picture">
+                <h3>Education for a child</h3>
+                <p>Our community outreach program is also an essential part of Education program. We are working with local
+                businesses to find out what skills and jobs are in demand, and we will then tailor our educational and internship
+                programmes to these needs.</p>
+            </div>
+        </div>
+    </section>
+
+        <!-------        Third section Donate Plan END     ----------->
+        <!-------        Third section Donate Plan END     ----------->
+        <!-------        Third section Donate Plan END     ----------->
 
 
 </body>
