--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <!---3 Different Plan Section --->
-        
+
         <div class="different_plan">
             <div class="plan food_plan">
                 <img src="image/food.png" alt="Food Picture">
@@ -118,6 +118,47 @@
         <!-------        Third section Donate Plan END     ----------->
         <!-------        Third section Donate Plan END     ----------->
 
+        <!-------        4th Section News and Blog section  Start     ----------->
+        <!-------        4th Section News and Blog section  Start     ----------->
+        <!-------        4th Section News and Blog section  Start     ----------->
 
+    <section class="latest_news">
+        <div class="portal news">
+            <h1>Latest News</h1>
+
+
+            <!---News Part -->
+            <div class="latest news_part1">
+                <a target="_blank" href="https://foodforthepoor.org/press/food-poor-minuto-dios-homes-colombia/"><h3>Food For The Poor, Minuto de Dios Inaugurate Homes for Families in Colombia</h3></a>
+                <small>July 5, 2022</small><hr>
+            </div>
+            <div class="latest news_part2">
+                <a href="https://foodforthepoor.org/press/food-poor-needs-volunteers-pack-meals-ukraine/" target="_blank"><h3>Food For The Poor Needs Volunteers to Pack Meals for Ukraine</h3></a>
+                <small>June 23, 2022</small><hr>
+            </div>
+            <div class="latest news_part3">
+                <a href="https://foodforthepoor.org/press/have-heart-marcela-food-poor-revives-campaign/" target="_blank"><h3>Have a Heart for Marcela: Food For The Poor Revives Campaign</h3></a>
+                <small>June 22, 2022</small><hr>
+            </div>
+            <div class="latest news_part4">
+                <a href="https://foodforthepoor.org/press/nativity-operation-starfish-gift-village-haiti/" target="_blank"><h3>Nativity’s Operation Starfish Gift to FFTP Will Build 13th Village in Haiti</h3></a>
+                <small>June 16, 2022</small><hr>
+            </div>
+        </div>
+
+        <!--Blog Part-->
+        <div class="portal blog">
+            <h1>Latest Blog</h1>
+            <h3>Called to Help: Change a Life Today</h3><hr>
+            <img src="image/family.jpg" height="280px" alt="Family Picture">
+            <p>Huddled together in a flimsy shack, Maria did her best to keep her four young children safe during heavy rains and
+            bitterly cold nights. Many families experiencing extreme poverty in the Caribbean and Latin America like Maria’s live
+            without a proper home and go hungry. Jobs are scarce and low-paying at best.So when <a href="#">[Read More]</a></p>
+        </div>
+    </section>
+
+        <!-------        4th Section News and Blog section End       ----------->
+        <!-------        4th Section News and Blog section End       ----------->
+        <!-------        4th Section News and Blog section End       ----------->
 </body>
 </html>
