--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <img src="image/family.jpg" height="280px" alt="Family Picture">
             <p>Huddled together in a flimsy shack, Maria did her best to keep her four young children safe during heavy rains and
             bitterly cold nights. Many families experiencing extreme poverty in the Caribbean and Latin America like Maria’s live
-            without a proper home and go hungry. Jobs are scarce and low-paying at best.So when <a href="#">[Read More]</a></p>
+            without a proper home and go hungry. Jobs are scarce and low-paying at best.So when <a href="https://foodforthepoor.org/" target="_blank">[Read More]</a></p>
         </div>
     </section>
 
