--- a/index.html
+++ b/index.html
@@ -160,5 +160,26 @@
         <!-------        4th Section News and Blog section End       ----------->
         <!-------        4th Section News and Blog section End       ----------->
         <!-------        4th Section News and Blog section End       ----------->
+    
+
+                <!-------        5th section Subscription Start       ----------->
+                <!-------        5th section Subscription Start       ----------->
+                <!-------        5th section Subscription Start       ----------->
+    <section class="subscribe">
+        <div class="subscribe_word box1">
+            <h1>Get My Updates</h1>
+            <p>Here's what you need to know about each update to the current work for the upcoming generation and we need start work together and know the present situation.</p>
+        </div>
+        <div class="subscribe_form box1">
+            <form action="#">
+                <input type="email" placeholder="Enter your Email">
+                <button>Subscribe Now</button>
+            </form>
+        </div>
+    </section>
+
+                    <!-------        5th section Subscription End       ----------->
+                    <!-------        5th section Subscription End       ----------->
+                    <!-------        5th section Subscription End       ----------->
 </body>
 </html>
