--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         </div>
 
         <div class="amount_write">
-            <h4>Other Amount (Dollar)</h4><hr>
+            <div class="amount_input">
+                <input type="text" placeholder="Other Amount (Dollar)">
+            </div>
             <a target="_blank" href="https://www.linkedin.com/in/ashraf-tanvir-043864223/">Donate Now</a>
         </div>
 
