--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Oleo+Script&family=Poppins:wght@400;600;700&display=swap"
         rel="stylesheet">
 
     <!--Style sheet Adding section-->
@@ -179,9 +183,23 @@
             </form>
         </div>
     </section>
+                <!-------        5th section Subscription End       ----------->
+                <!-------        5th section Subscription End       ----------->
+                <!-------        5th section Subscription End       ----------->
 
-                    <!-------        5th section Subscription End       ----------->
-                    <!-------        5th section Subscription End       ----------->
-                    <!-------        5th section Subscription End       ----------->
+
+    <!-------        Footer Section start       ----------->
+    <!-------        Footer Section start       ----------->
+    <!-------        Footer Section start       ----------->
+
+    <footer class="final_section">
+        <h3>Be the Best Version of Yourself</h3>
+        <p>“Yesterday is history, tomorrow is a mystery, but today is a gift. That’s why it is called the present”  - Master
+        Oogway, Kung Fu Panda”</p>
+    </footer>
+
+    <!-------        Footer Section End       ----------->
+    <!-------        Footer Section End        ----------->
+    <!-------        Footer Section End       ----------->
 </body>
 </html>
